Изменения сообщений и сообщений
Доработал возможность изменения своих отправленных сообщений
Удалил не использующие типы/файлы

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -150,5 +150,6 @@
   "ratinguser": "Rating User",
   "english": "English",
   "russian": "Russian",
-  "chinese": "Chinese"
+  "chinese": "Chinese",
+  "edited": "Edited"
 }
