--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -177,5 +177,6 @@
   "ratinguser": "Рейтинг",
   "english": "Английский",
   "russian": "Русский",
-  "chinese": "Китайский"
+  "chinese": "Китайский",
+  "edited": "Изменено"
 }
