Удаление ненужных файлов
Удалил ненужные файлы, почистил код
Реализовал "Делиться почтой" в AccountPage
Подключение кошелька после регистрации
Необязательно подключать кошелек при регистрации
Убрал быстрый вход по кошельку из логина

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -64,7 +64,7 @@
   "title.forgotPassword": "Восстановление пароля",
   "title.accountPage": "Профиль ",
   "title.operationsPage": "История заказов",
-  "shareEmail": "Делиться эл.почтой",
+  "shareEmail": "Делиться почтой",
   "shareCountry": "Делиться страной",
   "shareTimezone": "Делиться часовым поясом",
   "lastLogin": "Был в сети",
@@ -178,5 +178,5 @@
   "english": "Английский",
   "russian": "Русский",
   "chinese": "Китайский",
-  "edited": "Изменено"
+  "edited": "изменено"
 }
