--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -178,5 +178,11 @@
   "english": "Английский",
   "russian": "Русский",
   "chinese": "Китайский",
-  "edited": "изменено"
+  "edited": "изменено",
+  "Music": "Музыка",
+  "Clips": "Клипы",
+  "myMessages": "Мои сообщения",
+  "Create a Group": "Создать группу",
+  "Users": "Пользователи",
+  "Create a new user": "Создать нового пользователя"
 }
