Изменил разрешения Messages для корректного отображения

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -151,5 +151,6 @@
   "english": "English",
   "russian": "Russian",
   "chinese": "Chinese",
-  "edited": "Edited"
+  "edited": "Edited",
+  "myMessages": "My messages"
 }
