--- a/public/locales/ch.json
+++ b/public/locales/ch.json
@@ -156,5 +156,27 @@
   "myMessages": "我的消息",
   "Create a Group": "创建群组",
   "Users": "用户",
-  "Create a new user": "创建新用户"
+  "Create a new user": "创建新用户",
+  "Notifications": "通知",
+  "Saved Messages": "已保存的消息",
+  "Photos": "照片",
+  "Videos": "视频",
+  "Files": "文件",
+  "Voice Messages": "语音消息",
+  "Links": "链接",
+  "GIFs": "GIF",
+  "Group Name": "群组名称",
+  "Cancel": "取消",
+  "Next": "下一步",
+  "Done": "完成",
+  "Add participants": "添加参与者",
+  "Search users": "搜索用户",
+  "Group name cannot be empty": "群组名称不能为空",
+  "You must select at least one user to create a group chat.": "您必须选择至少一个用户来创建群组聊天。",
+  "Failed to create group": "创建群组失败",
+  "Group chat created successfully!": "群组聊天创建成功！",
+  "participant": "参与者",
+  "participants_two": "参与者",
+  "participants_many": "参与者",
+  "online": "在线"
 }
