--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -184,5 +184,26 @@
   "myMessages": "Мои сообщения",
   "Create a Group": "Создать группу",
   "Users": "Пользователи",
-  "Create a new user": "Создать нового пользователя"
+  "Create a new user": "Создать нового пользователя",
+  "Owner": "Владелец",
+  "Member": "Участник",
+  "Admin": "Администратор",
+  "Notifications": "Уведомления",
+  "Saved Messages": "Сообщения в избранном",
+  "Photos": "Фотографии",
+  "Videos": "Видео",
+  "Files": "Файлы",
+  "Voice Messages": "Голосовые сообщения",
+  "Links": "Ссылки",
+  "GIFs": "GIF",
+  "Group Name": "Название группы",
+  "Cancel": "Отмена",
+  "Done": "Готово",
+  "Add participants": "Добавить участников",
+  "Search users": "Поиск пользователей",
+  "Group name cannot be empty": "Название группы не может быть пустым",
+  "You must select at least one user to create a group chat.": "Вы должны выбрать хотя бы одного пользователя для создания группового чата.",
+  "Failed to create group": "Не удалось создать группу",
+  "Group chat created successfully!": "Групповой чат успешно создан!",
+  "Offline": "не в сети"
 }
