Доработка с сообщениями и видеоплеер
Просмотр видео благодаря видеоплеерому (доработать не получает с бэка видео)
Отправка файлов только тогда, когда отправили само сообщение, а не раньше времени

--- a/public/locales/ch.json
+++ b/public/locales/ch.json
@@ -178,5 +178,8 @@
   "participant": "参与者",
   "participants_two": "参与者",
   "participants_many": "参与者",
-  "online": "在线"
+  "online": "在线",
+  "addParticipant": "添加参与者",
+  "enterUsername": "输入用户名",
+  "add": "添加"
 }
