--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -159,5 +159,6 @@
   "online": "online",
   "addParticipant": "Add Participant",
   "enterUsername": "Enter username",
-  "add": "Add"
+  "add": "Add",
+  "image": "Image"
 }
