--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -187,6 +187,7 @@
   "Create a new user": "Создать нового пользователя",
   "Owner": "Владелец",
   "member": "Участник",
+  "Member": "Участник",
   "Admin": "Администратор",
   "Notifications": "Уведомления",
   "Saved Messages": "Сообщения в избранном",
@@ -213,5 +214,6 @@
   "online": "в сети",
   "addParticipant": "Добавить участника",
   "enterUsername": "Введите имя пользователя",
-  "add": "Добавить"
+  "add": "Добавить",
+  "image": "Фотография"
 }
