--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -148,7 +148,8 @@
     "title": "Страница в разработке",
     "subtitle": "Эта страница еще не готова",
     "description": "Мы работаем над этим разделом, и он скоро будет доступен.",
-    "button": "Вернуться на главную"
+    "button": "Вернуться на главную",
+    "lastUpdated": "Последнее обновление"
   },
   "phantomWalletRequired": "Подключите Phantom Wallet!",
   "phantomConnected": "Подключен Phantom",
@@ -215,5 +216,14 @@
   "addParticipant": "Добавить участника",
   "enterUsername": "Введите имя пользователя",
   "add": "Добавить",
-  "image": "Фотография"
+  "image": "Фотография",
+  "footer": {
+    "companyName": "SolaCoin",
+    "companySlogan": "Цифровая валюта будущего",
+    "about": "О нас",
+    "terms": "Условия использования",
+    "privacy": "Политика конфиденциальности",
+    "support": "Поддержка",
+    "rightsReserved": "Все права защищены"
+  }
 }
