--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -251,5 +251,14 @@
   "contactDescription": "Если у вас есть вопросы или вы хотите сотрудничать, свяжитесь с нами через один из следующих каналов:",
   "license": "Лицензия",
   "licenseDescription": "Все проекты под эгидой SolaCoin лицензированы по лицензии MIT. Пожалуйста, ознакомьтесь с лицензиями в отдельных репозиториях для получения более подробной информации.",
-  "finalNote": "Давайте вместе строить будущее децентрализованных финансов с SolaCoin."
+  "finalNote": "Давайте вместе строить будущее децентрализованных финансов с SolaCoin.",
+  "Logout": "Выйти",
+  "Editing": "Редактирование",
+  "delete": "Удалить",
+  "copy": "Копировать",
+  "forward": "Переслать",
+  "No messages": "Нет сообщений",
+  "Dark Mode": "Ночной режим",
+  "Language": "Язык",
+  "Loading chats": "Загрузка чатов"
 }
