refactor: замена draft-js на CustomTextarea, устранены лаги при вводе текста
Заменен компонент draft-js на CustomTextarea, созданный на основе @mui/joy/Textarea, для более стабильного и плавного ввода текста.
В draft-js наблюдались проблемы с производительностью и лаги при вводе текста, что особенно проявлялось на тёмной теме. При каждом вводе возникали артефакты и синий контур фокуса, который было сложно отключить.
Новый CustomTextarea:
Полностью отключает все фокусные стили, включая outline, box-shadow, и синий контур, с помощью переопределения стилей и CSS-переменных.
Устраняет лаги клавиатуры, обеспечивая более гладкий и отзывчивый ввод.
Поддерживает совместимость с тёмной темой благодаря нейтральным стилям.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -199,5 +199,8 @@
   "finalNote": "Together, let's build the future of decentralized finance with SolaCoin.",
   "delete": "Delete",
   "copy": "Copy",
-  "forward": "Forward"
+  "forward": "Forward",
+  "login.invalidCredentials": "Invalid email or password",
+  "login.unauthorized": "Authorization failed. Please check your credentials.",
+  "login.errorOccurred": "An error occurred. Please try again later."
 }
