--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -266,5 +266,15 @@
   "login.unauthorized": "Авторизация не удалась. Пожалуйста, проверьте свои данные.",
   "login.errorOccurred": "Произошла ошибка. Пожалуйста, попробуйте позже.",
   "registrationFailed": "Регистрация не удалась. Пожалуйста, попробуйте позже.",
-  "Username is already in use": "Имя пользователя уже используется"
+  "Username is already in use": "Имя пользователя уже используется",
+  "chatSettings": {
+    "title": "Настройки чата",
+    "groupNameLabel": "Название группы",
+    "groupNamePlaceholder": "Введите новое название",
+    "saveChanges": "Сохранить изменения",
+    "back": "Назад",
+    "noChanges": "Изменения не были внесены.",
+    "preparingUpdate": "Подготовка к обновлению настроек",
+    "updateFailed": "Не удалось обновить настройки"
+  }
 }
