Работа над сообщениями
В чате в хедере убрано еще один вывод username
В сообщениях исправлено открытие изображения

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -127,6 +127,8 @@
   "phantomWalletRequired": "Phantom wallet required!",
   "phantomConnected": "Connected Phantom",
   "connectPhantom": "Connect Phantom",
+  "metaMaskConnected": "Connected Metamask",
+  "connectMetaMask": "Connect Metamask",
   "phantomNotFound": "Phantom wallet not found! Please, install it.",
   "phantomConnectFailed": "Phantom Wallet connect failed",
   "loading": "Loading...",
@@ -212,5 +214,17 @@
     "noChanges": "No changes made.",
     "preparingUpdate": "Preparing to update settings",
     "updateFailed": "Failed to update settings"
+  },
+  "error": {
+    "phantomNotSupportSignMessage": "Phantom Wallet does not support message signing.",
+    "connectingPhantom": "Error connecting to Phantom:",
+    "connectingWallet": "Error connecting to wallet",
+    "phantomNotFound": "Phantom Wallet not found. Please install it.",
+    "connectingMetaMask": "Error connecting to MetaMask:",
+    "connectMetaMaskFailed": "Failed to connect to MetaMask.",
+    "metaMaskNotFound": "MetaMask not found. Please install MetaMask to connect."
+  },
+  "message": {
+    "confirmRegistration": "Sign this message to confirm registration. Nonce: {{nonce}}"
   }
 }
