--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -165,7 +165,7 @@
   "add": "Add",
   "image": "Image",
   "footer": {
-    "companyName": "SolaCoin",
+    "companyName": "SolaChat",
     "companySlogan": "The digital currency of the future",
     "about": "About Us",
     "terms": "Terms of Service",
@@ -174,21 +174,21 @@
     "rightsReserved": "All rights reserved"
   },
   "aboutSolacoinTitle": "About SolaCoin",
-  "welcome": "Welcome to the official website of SolaCoin",
-  "description": "a decentralized cryptocurrency built on the Solana blockchain. The SolaCoin project is designed to deliver fast, scalable, and secure transactions, shaping the future of decentralized finance (DeFi).",
+  "welcome": "Welcome to the official website of SolaChat",
+  "description": "a decentralized cryptocurrency built on the Solana blockchain. The SolaChat project is designed to deliver fast, scalable, and secure transactions, shaping the future of decentralized finance (DeFi).",
   "mission": "Our Mission",
   "missionDescription": "Our mission is to create a powerful, next-generation cryptocurrency that combines the speed and low-cost benefits of Solana with enhanced security and scalability. We aim to make digital payments and DeFi solutions accessible to everyone, with a focus on performance, efficiency, and transparency.",
   "projects": "Projects",
-  "projectsDescription": "Our organization hosts several key repositories related to the development and expansion of the SolaCoin ecosystem:",
-  "project1Title": "SolaCoin Token Smart Contracts",
+  "projectsDescription": "Our organization hosts several key repositories related to the development and expansion of the SolaChat ecosystem:",
+  "project1Title": "SolaChat Token Smart Contracts",
   "project1Description": "The core of our cryptocurrency, developed using Rust and Solana's Program Library (SPL).",
-  "project2Title": "SolaCoin Wallet",
+  "project2Title": "SolaChat Wallet",
   "project2Description": "A secure and easy-to-use digital wallet for managing your SolaCoin tokens.",
-  "project3Title": "SolaCoin Blockchain Explorer",
+  "project3Title": "SolaChat Blockchain Explorer",
   "project3Description": "A user-friendly explorer to track all SolaCoin-related transactions, blocks, and wallet activities on the Solana blockchain.",
   "technology": "Technology",
   "contributing": "Contributing",
-  "contributingDescription": "SolaCoin is an open-source project, and we welcome contributions from developers, designers, and blockchain enthusiasts. Here's how you can contribute:",
+  "contributingDescription": "SolaChat is an open-source project, and we welcome contributions from developers, designers, and blockchain enthusiasts. Here's how you can contribute:",
   "step1": "Explore the project and choose a part you would like to improve or expand.",
   "step2": "Discuss your ideas by opening an issue or joining our community channels.",
   "step3": "Work on your contribution by improving the code, design, or documentation.",
@@ -198,7 +198,7 @@
   "contactDescription": "If you have any questions or would like to collaborate, feel free to reach out to us through any of the following channels:",
   "license": "License",
   "licenseDescription": "All projects under the SolaCoin organization are licensed under the MIT License. Please refer to individual repositories for more details.",
-  "finalNote": "Together, let's build the future of decentralized finance with SolaCoin.",
+  "finalNote": "Together, let's build the future of decentralized finance with SolaChat.",
   "delete": "Delete",
   "copy": "Copy",
   "forward": "Forward",
