--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -218,7 +218,7 @@
   "add": "Добавить",
   "image": "Фотография",
   "footer": {
-    "companyName": "SolaCoin",
+    "companyName": "SolaChat",
     "companySlogan": "Цифровая валюта будущего",
     "about": "О нас",
     "terms": "Условия использования",
@@ -226,22 +226,22 @@
     "support": "Поддержка",
     "rightsReserved": "Все права защищены"
   },
-  "aboutSolacoinTitle": "О SolaCoin",
-  "welcome": "Добро пожаловать на официальный сайт SolaCoin",
-  "description": "SolaCoin — это децентрализованная криптовалюта, построенная на блокчейне Solana. Проект SolaCoin разработан для обеспечения быстрых, масштабируемых и безопасных транзакций, формируя будущее децентрализованных финансов (DeFi).",
+  "aboutSolacoinTitle": "О SolaChat",
+  "welcome": "Добро пожаловать на официальный сайт SolaChat",
+  "description": "SolaCoin — это децентрализованная криптовалюта, построенная на блокчейне Solana. Проект SolaChat разработан для обеспечения быстрых, масштабируемых и безопасных транзакций, формируя будущее децентрализованных финансов (DeFi).",
   "mission": "Наша миссия",
   "missionDescription": "Наша миссия — создать мощную криптовалюту нового поколения, которая сочетает в себе скорость и низкую стоимость блокчейна Solana с улучшенной безопасностью и масштабируемостью. Мы стремимся сделать цифровые платежи и решения DeFi доступными для всех, с упором на производительность, эффективность и прозрачность.",
   "projects": "Проекты",
-  "projectsDescription": "Наша организация поддерживает несколько ключевых репозиториев, связанных с развитием и расширением экосистемы SolaCoin:",
-  "project1Title": "Смарт-контракты токена SolaCoin",
+  "projectsDescription": "Наша организация поддерживает несколько ключевых репозиториев, связанных с развитием и расширением экосистемы SolaChat:",
+  "project1Title": "Смарт-контракты токена SolaChat",
   "project1Description": "Основной элемент нашей криптовалюты, разработанный с использованием Rust и библиотеки программ Solana (SPL).",
-  "project2Title": "Кошелек SolaCoin",
-  "project2Description": "Безопасный и удобный цифровой кошелек для управления вашими токенами SolaCoin.",
-  "project3Title": "Блокчейн-эксплорер SolaCoin",
-  "project3Description": "Удобный проводник для отслеживания всех транзакций, блоков и активности кошельков, связанных с SolaCoin, на блокчейне Solana.",
+  "project2Title": "Кошелек SolaChat",
+  "project2Description": "Безопасный и удобный цифровой кошелек для управления вашими токенами SolaChat.",
+  "project3Title": "Блокчейн-эксплорер SolaChat",
+  "project3Description": "Удобный проводник для отслеживания всех транзакций, блоков и активности кошельков, связанных с SolaChat, на блокчейне Solana.",
   "technology": "Технологии",
   "contributing": "Вклад в проект",
-  "contributingDescription": "SolaCoin — это проект с открытым исходным кодом, и мы приглашаем разработчиков, дизайнеров и энтузиастов блокчейна присоединиться к нашему развитию. Вот как вы можете внести свой вклад:",
+  "contributingDescription": "SolaChat — это проект с открытым исходным кодом, и мы приглашаем разработчиков, дизайнеров и энтузиастов блокчейна присоединиться к нашему развитию. Вот как вы можете внести свой вклад:",
   "step1": "Изучите проект и выберите часть, которую вы хотели бы улучшить или расширить.",
   "step2": "Обсудите свои идеи, открыв issue или присоединившись к нашим каналам сообщества.",
   "step3": "Работайте над улучшением кода, дизайна или документации.",
@@ -250,8 +250,8 @@
   "contact": "Контакты",
   "contactDescription": "Если у вас есть вопросы или вы хотите сотрудничать, свяжитесь с нами через один из следующих каналов:",
   "license": "Лицензия",
-  "licenseDescription": "Все проекты под эгидой SolaCoin лицензированы по лицензии MIT. Пожалуйста, ознакомьтесь с лицензиями в отдельных репозиториях для получения более подробной информации.",
-  "finalNote": "Давайте вместе строить будущее децентрализованных финансов с SolaCoin.",
+  "licenseDescription": "Все проекты под эгидой SolaChat лицензированы по лицензии MIT. Пожалуйста, ознакомьтесь с лицензиями в отдельных репозиториях для получения более подробной информации.",
+  "finalNote": "Давайте вместе строить будущее децентрализованных финансов с SolaChat.",
   "Logout": "Выйти",
   "Editing": "Редактирование",
   "delete": "Удалить",
