Работа со страницей профиля и сообщений

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -298,5 +298,6 @@
     "preview": "предварительный просмотр",
     "selectFile": "Выберите файл",
     "attachFile": "Прикрепить файл"
-  }
+  },
+  "Connecting": "Подключение"
 }
