Работа над UI-UX
Переработал навбар, сделано как в телеге открытие компонентов, доработал локализацию

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -234,5 +234,8 @@
     "preview": "preview",
     "selectFile": "Select File",
     "attachFile": "Attach File"
-  }
+  },
+  "uploadImage": "Upload Image",
+  "reset": "Reset",
+  "editImage": "Edit Image"
 }
