--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -299,5 +299,8 @@
     "selectFile": "Выберите файл",
     "attachFile": "Прикрепить файл"
   },
-  "Connecting": "Подключение"
+  "Connecting": "Подключение",
+  "uploadImage": "Загрузить изображение",
+  "reset": "Сбросить",
+  "editImage": "Редактировать изображение"
 }
