--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -9,7 +9,7 @@
   "rememberMe": "Remember me",
   "forgotPassword": "Forgot your password?",
   "signInButton": "Sign in",
-  "footerText": "© Coin {{year}}",
+  "footerText": "© DarkChat {{year}}",
   "rememberedPassword": "Remembered password?",
   "resetPassword": "Reset Password",
   "username": "Username",
@@ -106,7 +106,7 @@
   "Italic": "Italic",
   "Strikethrough": "Strikethrough",
   "Bullet list": "Bullet list",
-  "Online": "Online",
+  "Online": "online",
   "Username": "Username",
   "accountNotFound": "Account {{identifier}} not found",
   "your-account-was-updated": "Your account was updated",
@@ -237,5 +237,35 @@
   },
   "uploadImage": "Upload Image",
   "reset": "Reset",
-  "editImage": "Edit Image"
+  "editImage": "Edit Image",
+  "offline": "offline",
+  "just_now": "just now",
+  "last_seen": "last seen at {{time}}",
+  "minutes_ago_one": "{{count}} minute ago",
+  "minutes_ago_few": "{{count}} minutes ago",
+  "minutes_ago_many": "{{count}} minutes ago",
+  "hours_ago_one": "{{count}} hour ago",
+  "hours_ago_few": "{{count}} hours ago",
+  "hours_ago_many": "{{count}} hours ago",
+  "last_seen_yesterday": "yesterday at {{time}}",
+  "logout": "Log Out",
+  "totp_alert_title": "Secure your account with TOTP",
+  "totp_alert_description": "Enable Two-Factor Authentication (TOTP) to enhance security and simplify login.",
+  "totp_alert_button": "Set up TOTP",
+  "months": {
+    "01": "january",
+    "02": "february",
+    "03": "march",
+    "04": "april",
+    "05": "may",
+    "06": "june",
+    "07": "july",
+    "08": "august",
+    "09": "september",
+    "10": "october",
+    "11": "november",
+    "12": "december"
+  },
+  "date_format": "{{month}} {{day}}",
+  "date_format_with_year": "{{month}} {{day}}, {{year}}"
 }
