--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -9,7 +9,7 @@
   "rememberMe": "Запомнить меня",
   "forgotPassword": "Забыли пароль?",
   "signInButton": "Войти",
-  "footerText": "© Coin {{year}}",
+  "footerText": "© DarkChat {{year}}",
   "rememberedPassword": "Вспомнили свой пароль?",
   "resetPassword": "Сбросить пароль",
   "alreadyHaveAccount": "Зарегистрирован уже аккаунт?",
@@ -212,7 +212,6 @@
   "participant": "участник",
   "participants_two": "участника",
   "participants_many": "участников",
-  "online": "в сети",
   "addParticipant": "Добавить участника",
   "enterUsername": "Введите имя пользователя",
   "add": "Добавить",
@@ -302,5 +301,36 @@
   "Connecting": "Подключение",
   "uploadImage": "Загрузить изображение",
   "reset": "Сбросить",
-  "editImage": "Редактировать изображение"
+  "editImage": "Редактировать изображение",
+  "online": "в сети",
+  "offline": "оффлайн",
+  "just_now": "только что",
+  "last_seen": "был(а) {{time}}",
+  "minutes_ago_one": "{{count}} минуту назад",
+  "minutes_ago_few": "{{count}} минуты назад",
+  "minutes_ago_many": "{{count}} минут назад",
+  "hours_ago_one": "{{count}} час назад",
+  "hours_ago_few": "{{count}} часа назад",
+  "hours_ago_many": "{{count}} часов назад",
+  "last_seen_yesterday": "вчера в {{time}}",
+  "logout": "Выйти",
+  "totp_alert_title": "Защитите аккаунт с TOTP",
+  "totp_alert_description": "Включите двухфакторную аутентификацию (TOTP) для повышения безопасности и удобного входа.",
+  "totp_alert_button": "Настроить TOTP",
+  "months": {
+    "01": "января",
+    "02": "февраля",
+    "03": "марта",
+    "04": "апреля",
+    "05": "мая",
+    "06": "июня",
+    "07": "июля",
+    "08": "августа",
+    "09": "сентября",
+    "10": "октября",
+    "11": "ноября",
+    "12": "декабря"
+  },
+  "date_format": "{{day}} {{month}}",
+  "date_format_with_year": "{{day}} {{month}} {{year}}"
 }
